--- a/JS/dia5/exercicio-pokemon.html
+++ b/JS/dia5/exercicio-pokemon.html
@@ -71,12 +71,16 @@
                     transform: translateY(10px);
                 }
             
+
+                input{
+                    width: 70%;
+                }
             </style>
             <body>
                 <div class="container">
                     <div class="procurar">
                         <h1 class="titulo">Procure seu Pokemon</h1>
-                        <input type="text" name="" id="pesquisar" class="pesquisar" size="60" placeholder="Digite o nome do Pokemon">
+                        <input type="text" name="" id="pesquisar" class="pesquisar"  placeholder="Digite o nome do Pokemon">
                         <button class="btn" id="btn">Pesquisar</button>
                         <h1 id="count"></h1>
                     </div>
