--- a/JS/dia5/exercicio-pokemon.html
+++ b/JS/dia5/exercicio-pokemon.html
@@ -79,13 +79,13 @@
             <body>
                 <div class="container">
                     <div class="procurar">
-                        <h1 class="titulo">Procure seu Pokemon</h1>
+                        <h1 class="titulo">Procurar</h1>
                         <input type="text" name="" id="pesquisar" class="pesquisar"  placeholder="Digite o nome do Pokemon">
                         <button class="btn" id="btn">Pesquisar</button>
                         <h1 id="count"></h1>
                     </div>
                     <div id="conteudo">
-                        
+
                     </div>   
                 </div>
     <script>
@@ -105,7 +105,7 @@
             }
             }
             xhttp.open("GET", 'https://pokeapi.co/api/v2/pokemon', true);
-            xhttp.send();
+            xhttp.send();       
 
 
 });
